# rust-exercices

advent-of-code/2022/day1/src/: lib.rs
advent-of-code/2022/day2/src/: lib.rs
advent-of-code/2022/day3/src/: lib.rs
async-await-tokio/: Cargo.toml
async-await-tokio/src/: main.rs
axum-beginer/: Cargo.toml
axum-beginer/book-store/: Cargo.toml
axum-beginer/book-store/src/: book.rs  data.rs  main.rs  response.rs
axum-beginer/generate-random/: Cargo.toml
axum-beginer/generate-random/src/: main.rs
axum-beginer/hello-world/: Cargo.toml
axum-beginer/hello-world/src/: main.rs
axum-beginer/router-fallback/: Cargo.toml
axum-beginer/router-fallback/pages/: hello.html
axum-beginer/router-fallback/src/: main.rs
rusty-media/: Cargo.toml
rusty-media/src/: main.rs
