[package]
name = "router-fallback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.7"
base64 = "0.21.0"
http = "0.2.9"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
